add rofi remove wofi

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -162,7 +162,7 @@ bind = $mainMod, c, killactive,
 bind = $mainMod SHIFT, q, exit, 
 bind = $mainMod SHIFT, r, exec, ~/.config/waybar/start_waybar.sh
 bind = $mainMod, w, exec, firefox
-bind = $mainMod SHIFT, return, exec, wofi --show drun
+bind = $mainMod SHIFT, return, exec, rofi -show run
 bind = $mainMod, t, togglefloating, 
 bind = $mainMod, f, fullscreen
 bind = $mainMod, p, pseudo, # dwindle
