execute ipv6 script on user login

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -25,6 +25,7 @@ exec-once = dunst
 exec-once = deluged
 exec-once = swaybg -o eDP-1 -i ~/Images/night_waterfall_1920x1080.jpg -o HDMI-A-1 -i ~/Images/magic_forest.jpg
 exec-once = wl-paste --watch cliphist store
+exec-once = ~/.scripts/ip_check.sh
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
